# smelyzajko-gui

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL.md  README.md  main.cpp  setup_project.sh
TestModules/: CounterModule.cpp  CounterModule.h  CounterModuleGraphics.cpp  CounterModuleGraphics.h  MapModule.cpp  MapModule.h  MapModuleGraphics.cpp  MapModuleGraphics.h  README.md  Scrollbar.cpp  Scrollbar.h  TestGraphicModule.cpp  TestGraphicModule.h  TextArea.cpp  TextArea.h  TextModule.cpp  TextModule.h  TextModuleGraphics.cpp  TextModuleGraphics.h  UltrasonicModule.cpp  UltrasonicModule.h  UltrasonicModuleGraphics.cpp  UltrasonicModuleGraphics.h  map.json  map_log.json
TestModules/logs/: counter_log.json  map.json  map_log.json  ultrasonic_module_log.json
config-files/: config1.yaml  config2.yaml  config3.yaml
doc/: readme.txt
doc/html/: _button_8cpp.html  _button_8cpp__incl.map  _button_8cpp__incl.md5  _button_8h.html  _button_8h.js  _button_8h__dep__incl.map  _button_8h__dep__incl.md5  _button_8h__incl.map  _button_8h__incl.md5  _button_8h_source.html  _checkbox_8cpp.html  _checkbox_8cpp__incl.map  _checkbox_8cpp__incl.md5  _checkbox_8h.html  _checkbox_8h.js  _checkbox_8h__dep__incl.map  _checkbox_8h__dep__incl.md5  _checkbox_8h__incl.map  _checkbox_8h__incl.md5  _checkbox_8h_source.html  _configuration_mode_8cpp.html  _configuration_mode_8cpp.js  _configuration_mode_8cpp__incl.map  _configuration_mode_8cpp__incl.md5  _configuration_mode_8cpp_a2715a5d2c0c25eb341119e6476fb7fab_icgraph.map  _configuration_mode_8cpp_a2715a5d2c0c25eb341119e6476fb7fab_icgraph.md5  _configuration_mode_8cpp_ab038b0faebd75789ba2eaece6421add3_cgraph.map  _configuration_mode_8cpp_ab038b0faebd75789ba2eaece6421add3_cgraph.md5  _configuration_mode_8cpp_ab038b0faebd75789ba2eaece6421add3_icgraph.map  _configuration_mode_8cpp_ab038b0faebd75789ba2eaece6421add3_icgraph.md5  _configuration_mode_8cpp_ab15a8efc75f200e48464003a245e8d94_icgraph.map  _configuration_mode_8cpp_ab15a8efc75f200e48464003a245e8d94_icgraph.md5  _configuration_mode_8h.html  _configuration_mode_8h.js  _configuration_mode_8h__dep__incl.map  _configuration_mode_8h__dep__incl.md5  _configuration_mode_8h__incl.map  _configuration_mode_8h__incl.md5  _configuration_mode_8h_source.html  _counter_module_8cpp.html  (+979 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+47 more)
libs/ImGuiFileDialog/: CMakeLists.txt  ImGuiFileDialog.cpp  ImGuiFileDialog.h
logs/2025-01-22_23-59-19/MapModule/: MapGraphicElement.json
logs/2025-01-22_23-59-19/UltrasonicModule/: CounterGraphicElement.json  UltrasonicGraphicElement.json
logs/2025-01-23_20-22-44/CounterModule/: CounterGraphicElement.json  UltrasonicGraphicElement.json
logs/2025-01-23_20-22-44/MapModule/: MapGraphicElement.json
logs/2025-01-23_20-22-44/UltrasonicModule/: CounterGraphicElement.json  UltrasonicGraphicElement.json
logs/2025-01-23_20-25-13/CounterModule/: CounterGraphicElement.json  TextArea.json  UltrasonicGraphicElement.json
logs/2025-01-23_20-25-13/MapModule/: MapGraphicElement.json
logs/2025-01-23_20-25-13/UltrasonicModule/: CounterGraphicElement.json  UltrasonicGraphicElement.json
logs/2025-01-23_20-25-52/CounterModule/: CounterGraphicElement.json  TextArea.json  UltrasonicGraphicElement.json
logs/2025-01-23_20-25-52/MapModule/: MapGraphicElement.json  TextArea.json
logs/2025-01-23_20-25-52/UltrasonicModule/: CounterGraphicElement.json  UltrasonicGraphicElement.json
src/: Button.cpp  Checkbox.h  ConfigurationMode.cpp  ConfigurationMode.h  Element.h  GUI.cpp  GUI.h  GraphicModule.cpp  GraphicModule.h  Module.cpp  Module.h  ModuleLauncher.h  ModuleManager.cpp  ModuleManager.h  OperatingMode.cpp  OperatingMode.h  Rectangle.cpp  Rectangle.h  ReplayMode.cpp  ReplayMode.h  Scrollbar.cpp  Scrollbar.h  ShortcutsManager.cpp  ShortcutsManager.h  Slider.cpp  Slider.h  Template.cpp  Template.h  TemplateHandler.cpp  TemplateHandler.h  TemplateManager.cpp  TemplateManager.h  TextArea.cpp  TextArea.h  ToastNotificationManager.cpp  ToastNotificationManager.h
src/Replay/: ReplayMode.cpp  ReplayMode.h
src/configuration-mode/: ConfigurationMode.cpp  ConfigurationMode.h  ElementPlaceholder.cpp  ElementPlaceholder.h
src/widgets/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  Element.cpp  Element.h  HorizontalSlider.cpp  HorizontalSlider.h  Label.cpp  Label.h  MultiLineLabel.cpp  MultiLineLabel.h  Rectangle.cpp  Rectangle.h  SingleLineLabel.cpp  SingleLineLabel.h  Slider.cpp  Slider.h  TextInput.cpp  TextInput.h  VerticalSlider.cpp  VerticalSlider.h
templates/: Template.json  novy.json  template.json  template1.json  template2.json  template3.json  template4.json  template5.json  template6.json  template7.json  template_1.json
(+27 files in other folders)
